<resources>
    <string name="new_shopping_list">New shopping list</string>
    <string name="products_list">Products list</string>
    <string name="shopping_history">Shopping history</string>
    <string name="shopping_statistics">Shopping statistics</string>
    <string name="add_position">add_position</string>
    <string name="add_product">add_product</string>
    <string name="statistics">Statistics</string>
    <string name="position_name">Position_name</string>
    <string name="amount">Amount</string>
    <string name="confirm">Confirm</string>
    <string name="go_to_cart">go_to_cart</string>
    <string name="_0_00">0.00</string>
    <string name="product_name">product_name</string>
    <string name="l">L</string>
    <string name="kg">KG</string>
    <string name="pck">PCK</string>
    <string name="itm">ITM</string>
</resources>