<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray">

    <Button
        android:id="@+id/shopping_list_btn"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="90dp"
        android:text="@string/new_shopping_list"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:backgroundTint="#F44336"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/products_list_btn"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="50dp"
        android:text="@string/products_list"
        android:textSize="18sp"
        app:backgroundTint="#FFC107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_btn" />

    <Button
        android:id="@+id/history_btn"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="50dp"
        android:text="@string/shopping_history"
        android:textSize="18sp"
        app:backgroundTint="#FF5722"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopping_list_btn" />

    <Button
        android:id="@+id/statistics_btn"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="50dp"
        android:text="@string/shopping_statistics"
        android:textSize="18sp"
        app:backgroundTint="#FF9800"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>