<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/position_creation"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@color/white">

    <EditText
        android:id="@+id/Position_name"
        android:layout_width="265dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/holo_orange_light"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/position_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Amount"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/holo_orange_dark"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/amount"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/Position_name"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/creation_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Position_name" />

</androidx.constraintlayout.widget.ConstraintLayout>